# qllm2

./: .gitignore  CLA.md  CONTRIBUTING.md  EXPERIMENTS_V6.md  EXPERIMENTS_V6_DIFFUSION.md  EXPERIMENTS_V6_DIFFUSION_PART2.md  EXPERIMENTS_V6_MEMORY_REFRAME.md  EXPERIMENTS_V6_PART2.md  EXPERIMENTS_V_6_7_8_9.md  LICENSE  QUICK_REFERENCE.md  README.md  README_OLD.md  RECALL_PROGRAM.md  _compile_smoke.py  _oom_check.py  datasets_qllm.py  main.py  monitor_training.py  pyproject.toml  qllm_utils.py  quantum_llm_model.py  quantum_llm_train.py  sampling_qllm.py  test_current_model.py  test_improved_model.py  train_improved.py
grapher/: app.py  index.html
hf_release/: LICENSE  PUSH_TO_HF.md  README.md  SAMPLES_round-2b-gate.md  SAMPLES_round-4b-gate.md  SAMPLES_round-6b-gate copy.md  SAMPLES_round-6b-gate-compare-diagnostic.md  SAMPLES_round-6b-gate-compare.md  SAMPLES_round-6b-gate.md  SAMPLES_round-8b-gate-compare.md  SAMPLES_round-8b-gate.md  config.json  config_pretrain.json  eval_chat.py  eval_compare.py  eval_prompts_compare.yaml  eval_prompts_round1.yaml  modeling_qllm.py  requirements.txt  run_chat.py  run_complete.py  verify.sh  verify_legacy.sh
memory_probes/: PUBLICATION.md  README.md  __init__.py  __main__.py  adapters.py  behavioral.py  capacity.py  cli.py  compare.py  core.py  interference.py  language.py  long_context.py  paper.md  persistence.py  publication.py  rank.py  selftest.py  test_publication.py
notebooks/: qllm_v7_math_tutorial.ipynb
v6/mlx/: __init__.py  eval_downstream.py  model.py  model_real.py  pyproject.toml  train.py  train_real.py
(+592 files in other folders)
