[project]
name = "qpam-mlx"
version = "0.1.0"
description = "QPAM and RPAM models for MLX"
requires-python = ">=3.9"
dependencies = ["mlx", "numpy"]

[tool.setuptools]
packages = ["qpam_mlx"]
package-dir = {"qpam_mlx" = "."}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
